<resources>
    <string name="app_name">UrzasLifeCounter</string>
    <string name="action_settings">Settings</string>
    <string name="action_rollDice">Roll Dice</string>
    <string name="action_flipCoin">Flip Coin</string>
    <string name="action_new">New Game</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dice_rolled">""</string>
    <string name="action_add">Add Player</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="sound_checkbox">On or Off</string>
    <string name="settings_title">Settings</string>
    <string name="sound_title">Sound</string>
    <string name="amims_title">Animation Speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>

</resources>
