<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <!-- Our add icon will have its own button -->
    <item android:id="@+id/action_roll"
        android:icon="@drawable/dices"
        android:title="@string/action_rollDice"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_flip"
        android:icon="@drawable/coin"
        android:title="@string/action_flipCoin"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="@string/action_new"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

</menu>